fix(ai-label): add AI label and remove extra spacing (#629)

--- a/packages/ai-chat/src/chat/components-legacy/header/Header.scss
+++ b/packages/ai-chat/src/chat/components-legacy/header/Header.scss
@@ -1,6 +1,6 @@
-/* 
+/*
  *  Copyright IBM Corp. 2025
- *  
+ *
  *  This source code is licensed under the Apache-2.0 license found in the
  *  LICENSE file in the root directory of this source tree.
  */
@@ -58,6 +58,12 @@
 
 .cds-aichat--header__center-container:first-child {
   margin: 0 layout.$spacing-05;
+}
+
+.cds-aichat--header__slug-label {
+  color: theme.$text-secondary;
+  padding-block-end: layout.$spacing-04;
+  @include type.type-style("body-compact-01");
 }
 
 .cds-aichat--header__slug-title {
